# ai_arena

./: Cargo.toml  README.md
.cursor/commands/: plan.md
examples/: secrets.toml.example  test_batch.csv
plans/: ollama-agent-support.md  secret-configuration-separation.md
src/: agent.rs  agent_config.rs  csv_runner.rs  main.rs  secrets.rs
src/agents/: anthropic.rs  mod.rs  ollama.rs  openai.rs
src/games/: connect_four.rs  display.rs  game.rs  mod.rs  rock_paper_scissors.rs  stats.rs  tic_tac_toe.rs
