[package]
name = "ai_arena"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1.47", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1.83"
async-openai = "0.29"
rig-core = "0.19.0"
csv = "1.3.1"
llm-connector = "0.5.3"
uuid = { version = "1.10", features = ["v4", "serde"] }
tabled = "0.15"
toml = "0.8"
dirs = "5.0"
